# workload-services-framework

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  third-party-programs.txt
doc/: build.md  cluster-config.md  cmake.md  cmakelists.md  ctest.md  dockerfile.md  kpi.md  kubernetes-config.md  readme.md  setup-auth.md  setup-containerd.md  setup-cumulus.md  setup-docker.md  setup-gramine-sgx.md  setup-hugepage.md  setup-kubernetes.md  setup-module.md  setup-qat-in-tree.md  setup-qat.md  setup-storage.md  setup-terraform.md  setup-wsf.md  stack.md  template.md  terraform-options.md  validate.md  workload.md
script/: build-common.cmake  build.sh  check-git-repo.sh  check-license.sh  check-permission.sh  code-check.sh  component.cmake  create-dist.sh  cumulus.cmake  dist-start.sh  dist.cmake  docker.cmake  image.cmake  kubernetes.cmake  legalnotice.cmake  make-kpi.sh  multi-arch.cmake  overwrite.sh  platform.cmake  prerequisite.cmake  save_env.sh  scan-all.cmake  show-hostsetup.awk  stack.cmake  start.sh  sut-info.sh  terraform.cmake  update-workload-list.sh  validate.sh  workload.cmake
script/benchmark/: ctest.sh  debug.sh  kpi-list.awk  kpi-xls-ai.awk  kpi-xls-inst.awk  kpi-xls-list.awk  kpi-xls-table.awk  list-kpi.sh  sutinfo-inst.awk  sutinfo-json.awk  sutinfo-xls.awk  svrinfo-inst.awk  svrinfo-json.awk  svrinfo-xls.awk  xlsutil.awk
script/csp/: CMakeLists.txt  Dockerfile  build.sh  ssh_config
script/cumulus/: CMakeLists.txt  Dockerfile.1.alicloud  Dockerfile.1.aws  Dockerfile.1.azure  Dockerfile.1.gcp  Dockerfile.1.tencent  Dockerfile.2.cloud  Dockerfile.3.static  build.sh  cumulus-config.alicloud.yaml  cumulus-config.aws.yaml  cumulus-config.azure.yaml  cumulus-config.gcp.yaml  cumulus-config.static.yaml  cumulus-config.tencent.yaml  entrypoint.sh  provision.sh  reuse-sut.awk  shell.sh  ssh_config  validate.sh
script/docker/: trace.sh  validate.sh
script/kubernetes/: validate.sh
script/march/: CMakeLists.txt  setup.sh
script/multi-arch/: CMakeLists.txt  README.md  setup.sh
script/setup/: .gitignore  ansible.cfg  setup-ansible.sh  setup-common.sh  setup-dev.sh  setup-dev.yaml  setup-kvm.sh  setup-kvm.yaml  setup-reg.sh  setup-reg.yaml  setup-sut-docker.sh  setup-sut-docker.yaml  setup-sut-k8s.sh  setup-sut-k8s.yaml  setup-sut-native.sh  setup-sut-native.yaml  vars.yaml
script/terraform/: .gitignore  CMakeLists.txt  Dockerfile.1.alicloud  Dockerfile.1.aws  Dockerfile.1.azure  Dockerfile.1.gcp  Dockerfile.1.hyperv  Dockerfile.1.kvm  Dockerfile.1.oracle  Dockerfile.1.static  Dockerfile.1.tencent  Dockerfile.2.static-ext  Dockerfile.3.terraform  README.md  build.sh  entrypoint.sh  packer.sh  provision.sh  shell.sh  ssh_config  sut-info.sh  terraform-config.alicloud.tf  terraform-config.aws.tf  terraform-config.azure.tf  terraform-config.eks.tf  terraform-config.gcp.tf  terraform-config.gke.tf  terraform-config.hyperv.tf  terraform-config.kvm.tf  terraform-config.oracle.tf  terraform-config.static.tf  terraform-config.tencent.tf  validate.sh  vars.sh
stack/: CMakeLists.txt
stack/3DHuman-Pose/: Dockerfile  README.md
stack/Cassandra/: Dockerfile.3.cassandra.jdk11.amdaarch64  Dockerfile.3.cassandra.oh.jdk11.amdaarch64  README.md  build.sh  jvm11-server.options.new  validate.sh
stack/FFmpeg/: README.md  build.sh
stack/FFmpeg_ubuntu2404/: build.sh  kubernetes-config.yaml.m4  validate.sh
stack/JDK/: .gitignore  build.sh
stack/Kafka/: .gitignore  CMakeLists.txt  Dockerfile.1.kafka.unittest.m4  Dockerfile.2.kafka.base.m4  README.md  build.sh  kubernetes-config.yaml.m4  unittest.sh  validate.sh
stack/Linpack/: Dockerfile.1.intel.unittest  Dockerfile.2.amd  Dockerfile.2.intel  build.sh  cluster-config.yaml.m4  kubernetes-config.yaml.m4  validate.sh
stack/MongoDB/: Dockerfile.1.amd64mongodb441.base  Dockerfile.1.amd64mongodb604.base  Dockerfile.2.amd64mongodb441.base  Dockerfile.2.amd64mongodb604.redhat  Dockerfile.2.amd64mongodb604.ubuntu2404  Dockerfile.2.amd64mongodb700.base  Dockerfile.2.arm64mongodb441.base  Dockerfile.2.arm64mongodb604.base  Dockerfile.2.arm64mongodb604.redhat  Dockerfile.2.arm64mongodb604.ubuntu2404  Dockerfile.2.arm64mongodb700.base  README.md  build.sh  cluster-config.yaml.m4  kubernetes-config.yaml.m4  validate.sh
stack/PyTorch-Xeon/: Dockerfile.1.pytorch_xeon_public.unittest_24.04  Dockerfile.2.intel_public  Dockerfile.2.pytorch_xeon_oob_24.04  Dockerfile.2.pytorch_xeon_public  Dockerfile.2.pytorch_xeon_public_24.04  build.sh  build_ext.sh  cluster-config.yaml.m4  conda-requirements.txt  requirements.txt  validate.sh
stack/QAT/: Dockerfile.2.qathw-ssl3-ubuntu  Dockerfile.2.qathw-ssl3-ubuntu-24.04.1  Dockerfile.2.qatsw-ssl3-ubuntu  Dockerfile.2.qatsw-ssl3-ubuntu-23.43.1  Dockerfile.2.qatsw-ssl3-ubuntu-24.04.1  README.md  build.sh  cluster-config.yaml.m4  qat-crypto-base_guide.md  qat-invoke.sh  spr-qat-setup_guide.md
stack/QAT_UBUNTU2404/: Dockerfile.1.qatsw-ssl3-ubuntu2404-unit-test-1  Dockerfile.2.qatsw-ssl3-ubuntu2404  build.sh  cluster-config.yaml.m4  kubernetes-config.yaml.m4  validate.sh
stack/RocksDB/: Dockerfile.1.rocksdb.iaa.unittest  Dockerfile.2.rocksdb.iaa  README.md  build.sh  cluster-config.yaml.m4  compose-config.yaml.j2  docker-config.yaml.j2  validate.sh
stack/Trex/: Dockerfile  README.md
stack/UBUNTU2404_JDK/: build.sh  validate.sh  versions.txt
stack/ai_common/: Dockerfile
stack/kubevirt/: README.md  build.sh
stack/mysql/: CMakeLists.txt  Dockerfile.1.mysql.oh.unittest  Dockerfile.2.mysql.base  Dockerfile.2.mysql.oh  README.md  build.sh  kubernetes-config.yaml.m4  unittest.sh  validate.sh
stack/postgresql/: CMakeLists.txt  Dockerfile.1.postgresql.base.unittest  Dockerfile.2.postgresql1411.base  README.md  build.sh  kubernetes-config.yaml.m4  unittest.sh  validate.sh
stack/spdk-nvme-o-tcp-dsa/: Dockerfile.1.functest  Dockerfile.2.spdk-dsa  README.md  build.sh  cluster-config.yaml.m4  kubernetes-config.yaml.m4  validate.sh
staging/: README.md
staging/ApacheCassandra/: README.md
template/: config.m4
workload/: CMakeLists.txt  README.md  platforms
(+2964 files in other folders)
